# ready-set-deploy

./: CONTRIBUTING.md  DESIGN.md  README.md  THEORY.md  pyproject.toml  setup.cfg
ready_set_deploy/: auto_dependencies.py  cli.py  components.py  config.py  elements.py  itertools.py  list_patch.py  logic.py  model.py  registry.py  runner.py  systems.py  testing.py
ready_set_deploy/gatherers/: asdf.py  base.py  homebrew.py  pipx.py
ready_set_deploy/plugins/: base.py  homebrew1.py
ready_set_deploy/providers/: base.py  generic.py  homebrew.py  homebrew1.py  homebrew2.py  multiversion_packages.py
ready_set_deploy/renderers/: asdf.py  base.py  homebrew.py  pipx.py
scripts/: gather_mac_workstation.bash
tests/: test_components.py  test_elements.py  test_ready_set_deploy.py  test_systems.py
tests/renderers/: test_asdf.py
