[tool.poetry]
name = "ready-set-deploy"
version = "1.0.0"
description = "Ready-set-deploy is a deployment framework designed to be offline-first "
license = "MIT"
authors = ["Steven Karas <steven.karas@gmail.com>"]
readme = "README.md"
repository = "https://github.com/stevenkaras/ready-set-deploy"
classifiers = [
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
tomli = "^2.0.1"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
mypy = "^0.961"

[tool.poetry.scripts]
rsd = 'ready_set_deploy.cli:main'
rsd-patch = 'ready_set_deploy.list_patch:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160
max-complexity = 20

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
